        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=8007
        createElement() and XHTML (A dynamically created table not rendered as such)

        Follow the HTML5 rules of making the name lowercase and then
        creating the element in the xhtml namespace.



Canonical link: https://commits.webkit.org/18864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24146 268f45cc-cd09-0410-ab3c-d52691b4dbfc