WebCore/html/HTMLDocument.h
@@ -71,8 +71,6 @@ public:
 
     virtual bool childAllowed(Node*);
 
-    virtual PassRefPtr<Element> createElement(const String& tagName, ExceptionCode&);
-
     virtual void determineParseMode(const String&);
 
     void addNamedItem(const String& name);
